# BlowTorch-RL

./: .gitignore  build.gradle  build_ndk_libraries.sh  gradle.properties
BTLib/: AndroidManifest.xml  CMakeLists.txt  build.gradle
BTLib/jni/: Application.mk
BTLib/jni/bit/: Android.mk  CMakeLists.txt  cmake_install.cmake
BTLib/jni/lmarshal/: Android.mk  CMakeLists.txt
BTLib/jni/lsqlite3/: Android.mk  CMakeLists.txt
BTLib/jni/luabins/: Android.mk  CMakeLists.txt
BTLib/jni/luajava/: Android.mk  CMakeLists.txt  lauxlib.h  luajava.c
BTLib/jni/sqlite3/: Android.mk  CMakeLists.txt
BTLib/res/layout/: editor_selection_list_row.xml  timer_selection_list_row.xml  window_layout.xml
BTLib/res/layout-land/: blank.xml  vitals_widget.xml  window_layout.xml
BTLib/res/layout-sw600dp/: window_layout.xml
BTLib/res/xml/: preferences.xml
BTLib/src/com/offsetnull/bt/service/: StellarService.java
BTLib/src/es/reinosdeleyenda/flamethrower_lib/alias/: AliasData.aidl  AliasData.java  AliasEditorDialog.java  AliasEditorDialogDoneListener.java  AliasElementListener.java  AliasParser.java  AliasSelectionDialog.java  BetterAliasSelectionDialog.java
BTLib/src/es/reinosdeleyenda/flamethrower_lib/button/: ButtonEditorDialog.java  ButtonSetEditor.java  ButtonSetSelectorDialog.java  ColorPickerDialog.java  NewButtonSetEntryDialog.java  SlickButton.java  SlickButtonData.aidl  SlickButtonData.java
BTLib/src/es/reinosdeleyenda/flamethrower_lib/docs/: DocumentsHolder.java
BTLib/src/es/reinosdeleyenda/flamethrower_lib/launcher/: Launcher.java  LauncherSAXParser.java  LauncherSettings.java  MudConnection.java  NewConnectionDialog.java  ReadyListener.java
BTLib/src/es/reinosdeleyenda/flamethrower_lib/legacy/: BgestureListener.java  FixedViewFlipper.java  SlickButtonUtilities.java
BTLib/src/es/reinosdeleyenda/flamethrower_lib/responder/: IteratorModifiedException.java  TriggerResponder.java  TriggerResponderEditorDoneListener.java  TriggerStateInvalidException.java
BTLib/src/es/reinosdeleyenda/flamethrower_lib/script/: ScriptData.java
BTLib/src/es/reinosdeleyenda/flamethrower_lib/service/: Colorizer.java  Connection.java  ConnectionPluginCallback.java  DataPumper.java  FileUtil.java  GMCPData.java  IConnectionBinder.aidl  IConnectionBinderCallback.aidl  ILauncherCallback.aidl  IWindowCallback.aidl  LayoutElementListener.java  LayoutGroup.java  LayoutGroupElementListener.java  OptionNegotiator.java  Processor.java  SettingsChangedListener.java  StellarService.java  TC.java  WindowOptionElementListener.java  WindowToken.aidl  WindowToken.java  WindowTokenElementListener.java  (+2 more)
BTLib/src/org/keplerproject/luajava/: LuaInvocationHandler.java
(+161 files in other folders)
